--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_many_keywords.1.html
@@ -390,7 +390,7 @@
                   <ul class="matrix">
                     <li class="version">
                       <div class="label">
-                        <span class="stable">5.2.3</span>
+                        <span class="longest stable">5.2.3</span>
                         <span class="separator">/</span>
                         <span class="branch">main</span>
                       </div>
@@ -405,7 +405,7 @@
                     </li>
                     <li class="version">
                       <div class="label">
-                        <span class="beta">6.0.0-b1</span>
+                        <span class="longest beta">6.0.0-b1</span>
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with Swift 6.1">6.1</div>
@@ -420,7 +420,7 @@
                   <ul class="matrix">
                     <li class="version">
                       <div class="label">
-                        <span class="stable">5.2.3</span>
+                        <span class="longest stable">5.2.3</span>
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with iOS">iOS</div>
@@ -449,7 +449,7 @@
                     </li>
                     <li class="version">
                       <div class="label">
-                        <span class="beta">6.0.0-b1</span>
+                        <span class="longest beta">6.0.0-b1</span>
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with iOS">iOS</div>
@@ -470,7 +470,7 @@
                     </li>
                     <li class="version">
                       <div class="label">
-                        <span class="branch">main</span>
+                        <span class="longest branch">main</span>
                       </div>
                       <div class="results">
                         <div class="result compatible" title="Built successfully with iOS">iOS</div>
