--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/PackageShow_document_single_row_tables.1.html
@@ -186,7 +186,7 @@
                       <div class="label">
                         <span class="stable">5.2.5</span>
                         <span class="separator">/</span>
-                        <span class="beta">6.0.0-b1</span>
+                        <span class="longest beta">6.0.0-b1</span>
                         <span class="separator">/</span>
                         <span class="branch">main</span>
                       </div>
@@ -205,7 +205,7 @@
                       <div class="label">
                         <span class="stable">5.2.5</span>
                         <span class="separator">/</span>
-                        <span class="beta">6.0.0-b1</span>
+                        <span class="longest beta">6.0.0-b1</span>
                         <span class="separator">/</span>
                         <span class="branch">main</span>
                       </div>
